--- a/bower.json
+++ b/bower.json
@@ -21,10 +21,8 @@
     "tests"
   ],
   "dependencies": {
-    "edp-cmp1": "edp-progetti/edp-docu/edp-cmp1#^1.0.0",
-    "edp-cmp2": "edp-progetti/edp-docu/edp-cmp2#^1.0.0",
-    "edp-cmp3": "edp-progetti/edp-docu/edp-cmp3#^1.0.0",
-    "edp-cmp4": "edp-progetti/edp-docu/edp-cmp4#^1.0.0"
+    "edp-cmp1": "edp-progetti/edp-cmp1#^1.0.0",
+    "edp-cmp2": "edp-progetti/edp-cmp2#^1.0.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0"
