--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
   "authors": [
     "EDP Progetti"
   ],
-  "description": "EDP Documentation",
+  "description": "EDP Documentation full description",
   "keywords": [
     "edp",
     "progetti",
