--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,7 @@
     "tests"
   ],
   "dependencies": {
-    "edp-cmp1": "edp-progetti/edp-cmp1",
+    "edp-cmp1": "edp-progetti/edp-cmp1#1.0.0",
     "edp-cmp2": "edp-progetti/edp-cmp2"
   },
   "devDependencies": {
